@@ -7,6 +7,8 @@ Added insurance that the skater won't pass through a spline while in free-fall.
 Removed some bogus collision code (for handling ends of spline).
 Added code that prevents the skater from bouncing back and forth centered on a track.
 Added save/load for splines & skaters.
+Added roller-coaster mode (sticky tracks).
+Deleted some spline traversal code that caused the skater to get stuck.
 
 1.02.11 (11-3-2006)
 Made the "Return The Skater" button pop up when the skater is partially offscreen (rather than when he is completely offscreen).
